# codegov-website

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  angular.json  astro.config.mjs  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  test.did  tsconfig.json  turbo.json
.github/: CODEOWNERS
.github/actions/setup-bun/: action.yml
.github/actions/setup-dfx/: action.yml
.github/actions/setup-env-files/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-pnpm/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-and-test.yml  build.yml  cloudflare-deploy.yml  codestyle.yml  deploy-docs.yml  integration-test.yml  lint.yml  mainnet-deploy.yml  rust-tests.yml  tests.yml  typescript-tests.yml
docs/: ADMIN_DFX_COMMANDS.md  ADMIN_DFX_SETUP.md
lib/angular-ui/: package.json  tsconfig.json  tsconfig.spec.json
lib/backend/: package.json
lib/backend/src/: shim.d.ts  shim.js
lib/nns-utils/: package.json  tsconfig.json
lib/nns-utils/src/: candid.ts  index.ts  ledger.ts  util.ts
lib/styles/: common.scss  global.scss  package.json  resets.scss
lib/styles/common/: buttons.scss  colors.scss  dark-mode.scss  dropdown.scss  effects.scss  elevation.scss  forms.scss  icons.scss  responsiveness.scss  sizing.scss  typography.scss  utils.scss
lib/styles/global/: buttons.scss  collapsible.scss  dropdowns.scss  footer.scss  forms.scss  icons.scss  navbar.scss  overlays.scss  sidenav.scss  typography.scss
lib/tailwind/: common.css  package.json  preset.js  tailwind.config.js
lib/ui/: .gitignore  package.json  playwright.config.ts  stencil.config.ts  tsconfig.json
lib/ui/.storybook/: main.ts  preview.ts
lib/utils/: package.json  tsconfig.json
scripts/: build-canister.sh  create-rvm-proposal.sh  generate-nns-types.sh  init-dfx-state.sh  list-open-ic-os-version-election-proposals.sh  list-open-rvm-proposals.sh  postinstall.sh  run-integration-tests-2.sh  run-integration-tests.sh  scrape-logs.sh  setup-minter.sh  setup-neuron.sh  system-setup.sh  update-external-canisters.sh
scripts/_init-dfx-state/: Dockerfile  entrypoint.sh
scripts/canisters/: governance.did  ledger.did  registry.did
src/: index.scss
src/backend/impl/: Cargo.toml
src/backend/impl/src/: lib.rs
src/backend/impl/src/controllers/: dev_controller.rs  http_controller.rs  init_controller.rs  log_controller.rs  mod.rs  proposal_controller.rs  proposal_review_commit_controller.rs  proposal_review_controller.rs  user_profile_controller.rs
src/backend/impl/src/fixtures/: commit_sha.rs  date_time.rs  id.rs  image.rs  log.rs  mod.rs  proposal.rs  proposal_review.rs  proposal_review_commit.rs  user_profile.rs
src/backend/impl/src/helpers/: cbor.rs  certification.rs  http.rs  image.rs  mod.rs
src/backend/impl/src/mappings/: image.rs  log.rs  mod.rs  proposal.rs  proposal_review.rs  proposal_review_commit.rs  user_profile.rs
src/backend/impl/src/repositories/: certification_repository.rs  image_repository.rs  log_repository.rs  mod.rs  proposal_repository.rs  proposal_review_commit_repository.rs  proposal_review_repository.rs  user_profile_repository.rs
src/backend/impl/src/repositories/memories/: image_memory.rs  log_memory.rs  memory_manager.rs  mod.rs  proposal_memory.rs  proposal_review_commit_memory.rs  proposal_review_memory.rs  user_profile_memory.rs
src/backend/impl/src/repositories/types/: commit_sha.rs  date_time.rs  history.rs  image.rs  log.rs  mod.rs  proposal.rs  proposal_review.rs  proposal_review_commit.rs  user_profile.rs  user_profile_history.rs  uuid.rs
src/backend/impl/src/services/: access_control_service.rs  dev_service.rs  http_service.rs  image_service.rs  init_service.rs  log_service.rs  mod.rs  proposal_review_commit_service.rs  proposal_review_service.rs  proposal_service.rs  user_profile_service.rs
src/backend/impl/src/system_api/: mod.rs  principal.rs  rand.rs  time.rs
src/backend/logs/: Cargo.toml  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.json
src/backend/logs/src/: actor.rs  backend.rs  fetcher.rs  fetcher.ts  index.ts  main.rs  otlp.ts  polyfill.ts  utils.rs  utils.ts
src/components/: PrimaryNavbar.astro  PrimaryNavbarMenu.astro
src/docs/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
src/frontend/: .gitignore  index.html  package.json  pull-global-config.mjs  tailwind.config.js  tsconfig.json  tsconfig.spec.json  vite.config.mts
src/marketing/: astro.config.mjs  generate-alt-origins.mjs  package.json  tailwind.config.mjs  tsconfig.json
src/nns-testing/: package.json  tsconfig.json
src/nns-utils/: tsconfig.json
src/pages/: apply.md  index.md
(+715 files in other folders)
