[workspace]
resolver = "2"
members = [
  "src/backend/api",
  "src/backend/impl",
  "src/backend/external_canisters",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false

[workspace.dependencies]
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
ic-nns-governance = { git = "https://github.com/dfinity/ic", tag = "release-2024-02-21_23-01", version = "0.9.0" }

candid = "0.10"
candid_parser = "0.1"
serde = "1.0"
uuid = "1.6"

mockall = "0.12"
rstest = "0.18"
async-std = { version = "1.5", features = ["attributes"] }
