[package]
name = "backend_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
backend_api = { path = "../api" }

ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

candid.workspace = true
candid_parser.workspace = true
serde.workspace = true

uuid = { workspace = true, features = ["serde"] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
async-std.workspace = true
