[package]
name = "backend_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
dev = []

[dependencies]
backend_api = { path = "../api" }
external_canisters = { path = "../external_canisters" }

ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
ic-nns-governance.workspace = true
ic-http-certification = { git = "https://github.com/dfinity/response-verification", features = [
  "serde",
] }

candid.workspace = true
candid_parser.workspace = true
serde.workspace = true
serde_cbor = "0.11"

uuid = { workspace = true, features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
hex = "0.4"
lazy_static = "1.4"
base64 = "0.22"

rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
async-std.workspace = true
