[package]
name = "backend_logs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend_logs"
path = "src/main.rs"

[dependencies]
ic-cdk.workspace = true
ic-agent = "0.39"

candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true

clap = { version = "4.5", features = ["derive"] }
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = [
    "logs",
    "http-json",
    "reqwest-client",
], default-features = false }
opentelemetry_sdk = { version = "0.26", features = ["logs", "rt-tokio"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
chrono.workspace = true
